crud api n twig

--- a/app/templates/Home/test_twig.html.twig
+++ b/app/templates/Home/test_twig.html.twig
@@ -4,7 +4,7 @@
 	<div id="wrapper">
 		<div id="container">
 			<div id="welcome">
-				<h1>Hello Twig!!</h1>
+				<h1>Customers list</h1>
 				<table>
 					<thead>
 						<td>Name</td>
