--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		{% block stylesheets %}{% endblock %}
+	</head>
+	<body>
+		{# <script type="text/javascript" src="jquery.js"></script> #}
+		{% block body %}{% endblock %}
+		{# {% block javascripts %}
+			<script>
+				$(document).ready(function () {
+					alert("Script working properly");
+				});
+			</script>
+		{% endblock %} #}
+	</body>
 </html>
